--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,16 +3,21 @@
 {{ products | json }}
 
 <ul>
-  <li 
-  *ngFor="let product of products" 
-  [title]="product.description">
-  <h3>{{product.name}}</h3>
-  <p *ngIf="product.description"
-    {{product.description}}
-    [class.cher]="product.price<500"></p>
+  <li *ngFor="let product of products">
+    <h3>
+      <a [title]="product.name + ' details'"
+       [routerLink]="['/products', product.id]">
+        {{ product.name }}
+      </a>
+    </h3>
+    <p *ngIf="product.description">Description: {{ product.description }}</p>
+
+    <button type="button" (click)="share()">Share</button>
+
+    <app-product-alerts [product]="product" (notify)="onNotify()">
+    </app-product-alerts>
   </li>
 </ul>
-
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
